--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -23,7 +23,7 @@
     justify-content: center;
     border-radius: 0.4rem;
     box-shadow: $box-shadow-1;
-
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     transition: all 0.8s ease;
 
